Optimize Kotlin benchmark stack and add startup measurements